finished second row

--- a/app.css
+++ b/app.css
@@ -550,6 +550,10 @@ video {
   align-content: center;
 }
 
+.content-end{
+  align-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
