--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   border-left-color: hsl(0, 0%, 80%);
 }
 
+.font {
+  font-family: "Libre Baskerville", serif;
+}
+
 body {
   background-image: url(./Images/waterfall.jpg);
   background-size: cover;
@@ -101,6 +105,12 @@ body {
   width: 80%;
 }
 
+.leftSection {
+  width: 35vw;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 /*Top Bar*/
 .arrows {
   width: 30px;
@@ -124,16 +134,38 @@ body {
   height: 20px;
 }
 
-.rightSection img {
-  width: 30px;
-  height: 30px;
+.rightSection {
+  width: 15vw;
+}
+.rightSection #bell {
+  border-radius: 50%;
+  background-color: #6A706C;
+  padding: 5px;
+  width: 40px;
+  height: 40px;
 }
 .rightSection .profile {
   background-color: #6A706C;
   border-radius: 40px;
+  width: 10vw;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.rightSection .profile h3 {
+  font-size: 75%;
+}
+.rightSection .profile h4 {
+  font-size: 50%;
 }
 .rightSection .profile img {
   border-radius: 50%;
+  border: 1px solid #E50815;
+  width: 30px;
+  height: 30px;
 }
 
 /*Promo Show*/
@@ -143,8 +175,6 @@ body {
   width: 95%;
   height: 30vh;
   border-radius: 40px;
-  font-family: "Libre Baskerville", serif;
-  font-family: "Mukta", sans-serif;
 }
 .mainPromo .text {
   font-size: 200%;
